// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeriodicaArticleOrder, manifestation not part of statsbibliotek journal should give error 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "ERROR_PID_NOT_RESERVABLE",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, missing mail in user, but given in input, order success 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "OK",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, missing mail on user and input, should give error 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "ERROR_UNAUTHENTICATED_USER",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, municiapalityAgencyId not subscribed, should give error 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "ERROR_AGENCY_NOT_SUBSCRIBED",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, no municiapalityAgencyId, should give error 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "ERROR_UNAUTHENTICATED_USER",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, order success 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "OK",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, originRequester missing from smaug configuration 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "ERROR_MISSING_CLIENT_CONFIGURATION",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, unauthenticated token, should give error 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "ERROR_UNAUTHENTICATED_USER",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, user blocked by municipality - should give error 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "BORCHK_USER_BLOCKED_BY_AGENCY",
      },
    },
  },
}
`;

exports[`PeriodicaArticleOrder, userName and userMail set in input, order success 1`] = `
Object {
  "data": Object {
    "elba": Object {
      "placeCopyRequest": Object {
        "status": "OK",
      },
    },
  },
}
`;
